# agent_dylint_lints

./: .gitignore  Cargo.toml  README.md  assigning_clones  copy_iterator  cspell.json  fn_too_many_lines  long_function  main  no_expect  no_unwrap  package-lock.json  package.json  too_many_lines  unused_async  wildcard_imports
.centy/: .centy-manifest.json  config.json
.centy/docs/: config.yaml
.centy/issues/: 00b53dba-6fc0-4fb4-aa2e-1bdd7f929724.md  020bb9ad-7e55-49f1-b0cc-e7e1850cf3b4.md  0319e850-eb2b-437f-96de-5858717736e6.md  052df37e-9c46-4ea4-b283-d9e4beaf42db.md  0658d168-6534-4bf8-b808-66943d35d0e5.md  (+148 more)
.claude/: settings.json
.husky/: pre-commit  pre-push
examples/: assigning_clones.rs  assigning_clones.stderr  copy_iterator.rs  copy_iterator.stderr  fn_too_many_lines.rs  fn_too_many_lines.stderr  long_function.rs  long_function.stderr  max_nesting_depth.rs  max_nesting_depth.stderr  no_expect.rs  no_expect.stderr  no_unwrap.rs  no_unwrap.stderr  no_wrapper_functions.rs  no_wrapper_functions.stderr  tests_in_separate_files.rs  tests_in_separate_files.stderr  too_many_lines.rs  too_many_lines.stderr  unused_async.rs  unused_async.stderr  wildcard_imports.rs  wildcard_imports.stderr
src/: assigning_clones.rs  copy_iterator.rs  lib.rs  lib_tests.rs  logic.rs  logic_tests.rs  max_lines_per_file.rs  max_lines_per_function.rs  max_nesting_depth.rs  no_expect.rs  no_unwrap.rs  no_wrapper_functions.rs  tests_in_separate_files.rs  too_many_lines.rs  unused_async.rs  wildcard_imports.rs
tests/: coverage_main.rs  coverage_main_tests.rs
(+9 files in other folders)
