[package]
name = "agent_dylint_lints"
version = "0.1.0"
edition = "2024"
description = "Dylint lints for agent code patterns"
repository = "https://github.com/tupe12334/agent_dylint_lints"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "54482290b5f32e6c6b57cc9e0a17153f432b0036" }
dylint_linting = { version = "5.0.0", features = ["constituent"] }

[dev-dependencies]
dylint_testing = "5.0.0"

[package.metadata.rust-analyzer]
rustc_private = true
